# predictive_circuit_coding

./: .gitignore  AGENTS.md  CODEX.md  README.md  REWRITE_PLAN.md  pyproject.toml  recurrence_cluster_refinement.docx  tmp_retry_catalog_fix.txt  tmp_runtime_experiment.yaml
.claude/: CLAUDE.md  settings.local.json
documents/: artifact_contracts.md  codebase_audit_checklist.md  codebase_audit_log.md  dev_workflows.md  full_pipeline_results_synthesis.md  manual_acceptance_checklist.md  new_refinement.md  notebook_workflow.md  predictive_circuit_coding_design_doc.docx  project_guide.md  refinement_synthesis_brainstorm.md  troubleshooting.md  validation_logic_audit.md
notebooks/: diagnose_representation_motifs_colab.ipynb  discover_validate_inspect_colab.ipynb  run_predictive_circuit_coding_pipeline_colab.ipynb  tmp_migrate_legacy_colab_exports.ipynb  train_predictive_circuit_coding_colab.ipynb
predictive_circuit_coding/: __init__.py
scripts/: setup_allen_visual_behavior_prep_env.ps1
tests/: test_allen_brainsets_prep.py  test_allen_visual_behavior_pipeline.py  test_benchmarks_pipeline.py  test_cross_session_aug.py  test_data_foundation.py  test_decoding_geometry.py  test_decoding_labels.py  test_decoding_scoring.py  test_model_core.py  test_notebook_pipeline_progress.py  test_notebook_runtime_helpers.py  test_notebook_ui_preview.py  test_prepare_cli.py  test_refinement_core.py  test_session_catalog_selection.py  test_stage5_stage6_workflow.py  test_stage7_hardening.py  test_tokenization_core.py  test_training_runtime_config.py  test_validation_run.py  (+2 more)
(+133 files in other folders)
